<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <TextView
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/dklogin"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:src="@drawable/login"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="80dp" />
    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user"/>
        <EditText
            android:maxLength="10"
            android:id="@+id/edtname1"
            android:layout_margin="17dp"
            android:gravity="center"
            android:hint="@string/user"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/padlock"/>
        <EditText
            android:maxLength="10"
            android:id="@+id/edtpass1"
            android:layout_margin="17dp"
            android:gravity="center"
            android:hint="@string/pass"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/padlock"/>
        <EditText
            android:maxLength="10"
            android:id="@+id/cfpass"
            android:layout_margin="17dp"
            android:gravity="center"
            android:hint="@string/cfpass"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btndk"
        android:background="@color/btnlogin"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/btndk"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvlogin"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/tvlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>