<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Login_Activity">
    <TextView
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:src="@drawable/login"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="80dp" />
    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user"/>
        <EditText
            android:maxLength="10"
            android:id="@+id/edtname"
            android:layout_margin="17dp"
            android:gravity="center"
            android:hint="@string/user"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/padlock"/>
        <EditText
            android:maxLength="10"
            android:id="@+id/edtpass"
            android:layout_margin="17dp"
            android:gravity="center"
            android:hint="@string/pass"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnlogin"
        android:background="@color/btnlogin"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/btnlogin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvregis"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="20dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/tvtext"
        android:text="Bạn có 3 lần đăng nhập tài khoản"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>